Icon Service,modal formatting

--- a/nuzlocke.r/frontend/index.html
+++ b/nuzlocke.r/frontend/index.html
@@ -8,6 +8,15 @@
   <meta name="description" content="Pokemon Nuzlocke challenge tracker application by Aawab">
   <meta name="author" content="Aawab">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <!-- Preload critical icons for faster loading -->
+  <link rel="preload" href="/pokeball-1.png" as="image">
+  <link rel="preload" href="/pokeball-2.png" as="image">
+  <link rel="preload" href="/pc-1.png" as="image">
+  <link rel="preload" href="/pc-2.png" as="image">
+  <link rel="preload" href="/kill-1.png" as="image">
+  <link rel="preload" href="/release-3.png" as="image">
+  <link rel="preload" href="/release-5.png" as="image">
 </head>
 <body>
   <app-root></app-root>
